output tensor size cheatsheet markdown

--- a/ConvNet.ipynb
+++ b/ConvNet.ipynb
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculating output tensors size\n",
+    "## Calculating output tensors size\n",
     "- output of convlution layer\n",
     "$$ W_{convlution} = \\frac{W_{input} - W_{filter} - 2 * Padding}{Stride} + 1$$\n",
     "\n",
